--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
+  "scripts": {
+    "build": "yarn install"
+  },
   "dependencies": {
     "vanillajs-scrollspy": "^2.0.3"
   }
